--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
         "postcss": "^8.4.23",
         "tailwindcss": "^3.3.2",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "i": "^0.3.7",
+        "npm": "^9.6.7",
+        "or": "^0.2.0"
     }
 }
