--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "i": "^0.3.7",
         "npm": "^9.6.7",
-        "or": "^0.2.0"
+        "or": "^0.2.0",
+        "swiper": "^9.3.2"
     }
 }
